--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "Karthik Sukumaran",
   "license": "ISC",
@@ -19,7 +19,9 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "nanoid": "^3.1.20",
+    "nexmo": "^2.9.1",
     "node-fetch": "^2.6.1",
-    "node-tesseract-ocr": "^2.0.0"
+    "node-tesseract-ocr": "^2.0.0",
+    "otp-generator": "^2.0.0"
   }
 }
